# styledctk-widgets

./: README.md  pyproject.toml  requirements.txt
proj-test/: LICENSE.txt  README.md  pyproject.toml
proj-test/src/proj_test/: __about__.py  __main__.py  testlib.py
proj-test/src/proj_test/cli/: __init__.py
proj-test/tests/: __init__.py
src/styledctk_widgets/: __about__.py  __main__.py
src/styledctk_widgets/CTK_Buttons/: CTK_Button_styles.py  SCTkButton.py
src/styledctk_widgets/CTK_Entrys/: CTK_Entry_styles.py
src/styledctk_widgets/cli/: __init__.py
