[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proj-test"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "DigitalCreationsLibrary", email = "aimosta.official@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "customtkinter",
  "styledctk-widgets"
]

[project.urls]
Documentation = "https://github.com/DigitalCreationsLibrary/proj-test#readme"
Issues = "https://github.com/DigitalCreationsLibrary/proj-test/issues"
Source = "https://github.com/DigitalCreationsLibrary/proj-test"

[project.scripts]
proj-test = "proj_test.cli:proj_test"

[tool.hatch.version]
path = "src/proj_test/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/proj_test tests}"

[tool.coverage.run]
source_pkgs = ["proj_test", "tests"]
branch = true
parallel = true
omit = [
  "src/proj_test/__about__.py",
]

[tool.coverage.paths]
proj_test = ["src/proj_test", "*/proj-test/src/proj_test"]
tests = ["tests", "*/proj-test/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
